// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loading bookmark config fetchBookmarkConfig should return locale bookmarks as JSON 1`] = `
Object {
  "body": Object {
    "description": "These are sample bookmarks to teach you how Bookworms works",
    "folders": Array [
      Object {
        "description": "This is to describe the folder structure",
        "folders": Array [
          Object {
            "bookmarks": Array [
              Object {
                "description": "this is used to describe the bookmark",
                "href": "https://www.mywebsite.com",
                "label": "sample url 1",
              },
            ],
            "description": "This is to describe the sub folder structure",
            "label": "sub folder 1",
          },
        ],
        "label": "folder 1",
      },
      Object {
        "folders": Array [
          Object {
            "bookmarks": Array [
              Object {
                "description": "this is used to describe the bookmark",
                "href": "https://www.mywebsite.com",
                "label": "sample url 2",
              },
              Object {
                "description": "this is used to describe the bookmark",
                "href": "https://www.mywebsite.com",
                "label": "sample url 3",
              },
            ],
            "label": "sub folder 2",
          },
          Object {
            "bookmarks": Array [
              Object {
                "description": "this is used to describe the bookmark",
                "href": "https://www.mywebsite.com",
                "label": "sample url 4",
              },
              Object {
                "description": "this is used to describe the bookmark",
                "href": "https://www.mywebsite.com",
                "label": "sample url 5",
              },
            ],
            "label": "sub folder 3",
          },
        ],
        "label": "folder 2",
      },
    ],
    "label": "Bookworms",
  },
  "type": "local",
}
`;

exports[`loading bookmark config fetchBookmarkConfig should return locale bookmarks as YAML 1`] = `
Object {
  "body": "label: Bookworms
description: These are sample bookmarks to teach you how Bookworms works
folders:
  - 
    label: folder 1
    description: This is to describe the folder structure
    folders:
      - 
        label: sub folder 1
        description: This is to describe the sub folder structure
        bookmarks:
          - 
            label: sample url 1
            description: this is used to describe the bookmark
            href: https://www.mywebsite.com
  - 
    label: folder 2
    folders:
      - 
        label: sub folder 2
        bookmarks:
          - 
            label: sample url 2
            description: this is used to describe the bookmark
            href: https://www.mywebsite.com
          - 
            label: sample url 3
            description: this is used to describe the bookmark
            href: https://www.mywebsite.com
      - 
        label: sub folder 3
        bookmarks:
          - 
            label: sample url 4
            description: this is used to describe the bookmark
            href: https://www.mywebsite.com
          - 
            label: sample url 5
            description: this is used to describe the bookmark
            href: https://www.mywebsite.com",
  "type": "local",
}
`;

exports[`loading bookmark config fetchBookmarkConfig should return remote bookmarks as JSON 1`] = `
Object {
  "body": Object {
    "description": "These are sample bookmarks to teach you how Bookworms works",
    "folders": Array [
      Object {
        "description": "This is to describe the folder structure",
        "folders": Array [
          Object {
            "bookmarks": Array [
              Object {
                "description": "this is used to describe the bookmark",
                "href": "https://www.mywebsite.com",
                "label": "sample url 1",
              },
            ],
            "description": "This is to describe the sub folder structure",
            "label": "sub folder 1",
          },
        ],
        "label": "folder 1",
      },
      Object {
        "folders": Array [
          Object {
            "bookmarks": Array [
              Object {
                "description": "this is used to describe the bookmark",
                "href": "https://www.mywebsite.com",
                "label": "sample url 2",
              },
              Object {
                "description": "this is used to describe the bookmark",
                "href": "https://www.mywebsite.com",
                "label": "sample url 3",
              },
            ],
            "label": "sub folder 2",
          },
          Object {
            "bookmarks": Array [
              Object {
                "description": "this is used to describe the bookmark",
                "href": "https://www.mywebsite.com",
                "label": "sample url 4",
              },
              Object {
                "description": "this is used to describe the bookmark",
                "href": "https://www.mywebsite.com",
                "label": "sample url 5",
              },
            ],
            "label": "sub folder 3",
          },
        ],
        "label": "folder 2",
      },
    ],
    "label": "Bookworms",
  },
  "type": "remote",
}
`;

exports[`loading bookmark config fetchBookmarkConfig should return remote bookmarks as YAML 1`] = `
Object {
  "body": "label: Bookworms
description: These are sample bookmarks to teach you how Bookworms works
folders:
  - label: folder 1
    description: This is to describe the folder structure
    folders:
      - label: sub folder 1
        description: This is to describe the sub folder structure
        bookmarks:
          - label: sample url 1
            description: this is used to describe the bookmark
            href: https://www.mywebsite.com
  - label: folder 2
    folders:
      - label: sub folder 2
        bookmarks:
          - label: sample url 2
            description: this is used to describe the bookmark
            href: https://www.mywebsite.com
          - label: sample url 3
            description: this is used to describe the bookmark
            href: https://www.mywebsite.com
      - label: sub folder 3
        bookmarks:
          - label: sample url 4
            description: this is used to describe the bookmark
            href: https://www.mywebsite.com
          - label: sample url 5
            description: this is used to describe the bookmark
            href: https://www.mywebsite.com",
  "type": "remote",
}
`;

exports[`loading bookmark config fetchLocaleBookmarkYAML should return JSON from local YMAL 1`] = `
"label: Bookworms
description: These are sample bookmarks to teach you how Bookworms works
folders:
  - 
    label: folder 1
    description: This is to describe the folder structure
    folders:
      - 
        label: sub folder 1
        description: This is to describe the sub folder structure
        bookmarks:
          - 
            label: sample url 1
            description: this is used to describe the bookmark
            href: https://www.mywebsite.com
  - 
    label: folder 2
    folders:
      - 
        label: sub folder 2
        bookmarks:
          - 
            label: sample url 2
            description: this is used to describe the bookmark
            href: https://www.mywebsite.com
          - 
            label: sample url 3
            description: this is used to describe the bookmark
            href: https://www.mywebsite.com
      - 
        label: sub folder 3
        bookmarks:
          - 
            label: sample url 4
            description: this is used to describe the bookmark
            href: https://www.mywebsite.com
          - 
            label: sample url 5
            description: this is used to describe the bookmark
            href: https://www.mywebsite.com"
`;

exports[`loading bookmark config fetchRemoteBoomarkYMAL should return JSON from http request 1`] = `
Object {
  "body": "label: Bookworms
description: These are sample bookmarks to teach you how Bookworms works
folders:
  - label: folder 1
    description: This is to describe the folder structure
    folders:
      - label: sub folder 1
        description: This is to describe the sub folder structure
        bookmarks:
          - label: sample url 1
            description: this is used to describe the bookmark
            href: https://www.mywebsite.com
  - label: folder 2
    folders:
      - label: sub folder 2
        bookmarks:
          - label: sample url 2
            description: this is used to describe the bookmark
            href: https://www.mywebsite.com
          - label: sample url 3
            description: this is used to describe the bookmark
            href: https://www.mywebsite.com
      - label: sub folder 3
        bookmarks:
          - label: sample url 4
            description: this is used to describe the bookmark
            href: https://www.mywebsite.com
          - label: sample url 5
            description: this is used to describe the bookmark
            href: https://www.mywebsite.com",
  "path": "https://raw.githubusercontent.com/thearegee/bookworms/main/demo/config/bookmarks.yaml",
}
`;
